--- a/.rvmrc
+++ b/.rvmrc
@@ -6,7 +6,7 @@
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
 # Only full ruby name is supported here, for short names use:
 #     echo "rvm use 1.9.3" > .rvmrc
-environment_id="ruby-1.9.3-p374@eval_comite"
+environment_id="ruby-2.0.0@eval_comite"
 
 # Uncomment the following lines if you want to verify rvm version per project
 # rvmrc_rvm_version="1.18.4 (master)" # 1.10.1 seams as a safe start
@@ -17,7 +17,7 @@ environment_id="ruby-1.9.3-p374@eval_comite"
 
 # First we attempt to load the desired environment directly from the environment
 # file. This is very fast and efficient compared to running through the entire
-# CLI and selector. If you want feedback on which environment was used then
+# CLI and selector. If you wantr feedback on which environment was used then
 # insert the word 'use' after --create as this triggers verbose mode.
 if [[ -d "${rvm_path:-$HOME/.rvm}/environments"
   && -s "${rvm_path:-$HOME/.rvm}/environments/$environment_id" ]]
