--- a/.rvmrc
+++ b/.rvmrc
@@ -6,7 +6,7 @@
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
 # Only full ruby name is supported here, for short names use:
 #     echo "rvm use 1.9.3" > .rvmrc
-environment_id="ruby-2.0.0-rc1@eval_comite"
+environment_id="ruby-2.0.0@eval_comite"
 
 # Uncomment the following lines if you want to verify rvm version per project
 # rvmrc_rvm_version="1.18.4 (master)" # 1.10.1 seams as a safe start
