--- a/test/fixtures/evaluations.yml
+++ b/test/fixtures/evaluations.yml
@@ -9,6 +9,7 @@
 #  notes              :text
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
+#  name               :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
